--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
   "name": "criss-cross",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "A simple and fast API to manage viewport and  DOM elements intersections as you scroll",
   "homepage": "https://github.com/thierrymichel/criss-cross#readme",
   "main": "lib/index.js",
-  "browser": "./lib/criss-cross.min.js",
+  "module": "es/index.js",
+  "browser": "dist/criss-cross.min.js",
+  "files": [
+    "dist",
+    "lib",
+    "es",
+    "src"
+  ],
   "scripts": {
-    "clean": "rm -rf lib/*",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "clean": "rimraf lib dist es",
     "filesize": "gzip-size lib/criss-cross.min.js",
     "lint": "eslint src/** || exit 0",
-    "minify": "uglifyjs -o ./lib/criss-cross.min.js ./lib/index.js",
+    "build": "npm-run-all build:commonjs build:umd build:umd:min build:es",
+    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
+    "build:commonjs:watch": "npm run build:commonjs -- --watch",
+    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
+    "build:es:watch": "npm run build:es -- --watch",
+    "build:umd": "cross-env BABEL_ENV=umd NODE_ENV=development webpack --progress --profile",
+    "build:umd:watch": "npm run build:umd -- --watch",
+    "build:umd:min": "cross-env BABEL_ENV=umd NODE_ENV=production webpack --progress --profile",
+    "test": "npm run lint && nyc ava -v",
     "test:watch": "ava -v -w --color",
-    "webpack": "webpack --progress --profile",
-    "webpack:watch": "webpack --watch",
-    "prepublish": "npm run build",
-    "start": "npm-run-all lint clean webpack:watch",
-    "dev": "npm-run-all lint clean --parallel webpack:watch test:watch",
-    "build": "npm-run-all lint clean webpack minify",
-    "test": "nyc ava -v"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "precommit": "npm test",
+    "prepublish": "npm-run-all clean test build"
   },
   "repository": {
     "type": "git",
@@ -43,17 +53,20 @@
   },
   "devDependencies": {
     "ava": "0.23.0",
+    "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "8.0.1",
     "babel-loader": "7.1.2",
+    "babel-plugin-add-module-exports": "0.2.1",
     "babel-preset-env": "1.6.1",
-    "babel-register": "6.26.0",
     "coveralls": "3.0.0",
+    "cross-env": "5.1.1",
     "eslint": "4.10.0",
     "eslint-plugin-ava": "4.2.2",
     "gzip-size-cli": "2.1.0",
+    "husky": "0.14.3",
     "npm-run-all": "4.1.1",
     "nyc": "11.3.0",
-    "uglify-js": "3.1.7"
+    "webpack": "3.8.1"
   }
 }
